@@ -1201,28 +1201,28 @@ Global
 		{912783D2-CF6F-4040-B564-4E2436EB0827}.Release|x64.Build.0 = Release|x64
 		{C177FB94-66E8-424E-BDBE-A96C75D2672C}.Debug|Win32.ActiveCfg = Debug|Win32
 		{C177FB94-66E8-424E-BDBE-A96C75D2672C}.Debug|Win32.Build.0 = Debug|Win32
-		{C177FB94-66E8-424E-BDBE-A96C75D2672C}.Debug|x64.ActiveCfg = Debug|Win32
+		{C177FB94-66E8-424E-BDBE-A96C75D2672C}.Debug|x64.ActiveCfg = Debug|x64
+		{C177FB94-66E8-424E-BDBE-A96C75D2672C}.Debug|x64.Build.0 = Debug|x64
 		{C177FB94-66E8-424E-BDBE-A96C75D2672C}.Release|Win32.ActiveCfg = Release|Win32
 		{C177FB94-66E8-424E-BDBE-A96C75D2672C}.Release|Win32.Build.0 = Release|Win32
-		{C177FB94-66E8-424E-BDBE-A96C75D2672C}.Release|x64.ActiveCfg = Release|Win32
-		{F343CDCB-1DB5-4563-86DF-6AF1596090B2}.Debug|Pocket PC 2003 (ARMV4).ActiveCfg = Debug|Win32
+		{C177FB94-66E8-424E-BDBE-A96C75D2672C}.Release|x64.ActiveCfg = Release|x64
+		{C177FB94-66E8-424E-BDBE-A96C75D2672C}.Release|x64.Build.0 = Release|x64
 		{F343CDCB-1DB5-4563-86DF-6AF1596090B2}.Debug|Win32.ActiveCfg = Debug|Win32
 		{F343CDCB-1DB5-4563-86DF-6AF1596090B2}.Debug|Win32.Build.0 = Debug|Win32
 		{F343CDCB-1DB5-4563-86DF-6AF1596090B2}.Debug|x64.ActiveCfg = Debug|x64
 		{F343CDCB-1DB5-4563-86DF-6AF1596090B2}.Debug|x64.Build.0 = Debug|x64
-		{F343CDCB-1DB5-4563-86DF-6AF1596090B2}.Release|Pocket PC 2003 (ARMV4).ActiveCfg = Release|Win32
 		{F343CDCB-1DB5-4563-86DF-6AF1596090B2}.Release|Win32.ActiveCfg = Release|Win32
 		{F343CDCB-1DB5-4563-86DF-6AF1596090B2}.Release|Win32.Build.0 = Release|Win32
 		{F343CDCB-1DB5-4563-86DF-6AF1596090B2}.Release|x64.ActiveCfg = Release|x64
 		{F343CDCB-1DB5-4563-86DF-6AF1596090B2}.Release|x64.Build.0 = Release|x64
-		{90B762AB-B7BA-42D6-9819-C687AB3F59D0}.Debug|Pocket PC 2003 (ARMV4).ActiveCfg = Debug|Win32
 		{90B762AB-B7BA-42D6-9819-C687AB3F59D0}.Debug|Win32.ActiveCfg = Debug|Win32
 		{90B762AB-B7BA-42D6-9819-C687AB3F59D0}.Debug|Win32.Build.0 = Debug|Win32
-		{90B762AB-B7BA-42D6-9819-C687AB3F59D0}.Debug|x64.ActiveCfg = Debug|Win32
-		{90B762AB-B7BA-42D6-9819-C687AB3F59D0}.Release|Pocket PC 2003 (ARMV4).ActiveCfg = Release|Win32
+		{90B762AB-B7BA-42D6-9819-C687AB3F59D0}.Debug|x64.ActiveCfg = Debug|x64
+		{90B762AB-B7BA-42D6-9819-C687AB3F59D0}.Debug|x64.Build.0 = Debug|x64
 		{90B762AB-B7BA-42D6-9819-C687AB3F59D0}.Release|Win32.ActiveCfg = Release|Win32
 		{90B762AB-B7BA-42D6-9819-C687AB3F59D0}.Release|Win32.Build.0 = Release|Win32
-		{90B762AB-B7BA-42D6-9819-C687AB3F59D0}.Release|x64.ActiveCfg = Release|Win32
+		{90B762AB-B7BA-42D6-9819-C687AB3F59D0}.Release|x64.ActiveCfg = Release|x64
+		{90B762AB-B7BA-42D6-9819-C687AB3F59D0}.Release|x64.Build.0 = Release|x64
 	EndGlobalSection
 	GlobalSection(SolutionProperties) = preSolution
 		HideSolutionNode = FALSE
